syntax = "proto3";

package user;

// User type with required fields
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

// Request for creating a user
message CreateUserRequest {
  string name = 1;
  string email = 2;
}

// Response with created user
message CreateUserResponse {
  User user = 1;
}

// Request for getting users (optionally filtered by name)
message GetUsersRequest {
  string name_filter = 1; // Optional: filter users by name (case-insensitive partial match)
}

// Response with users
message GetUsersResponse {
  repeated User users = 1;
}

// Request for deleting a user
message DeleteUserRequest {
  int32 id = 1;
}

// Response confirming deletion
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// UserService with all methods
service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
